// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CatsList it should render the cat list based on gender Female 1`] = `
<DocumentFragment>
  <div
    data-testid="cats-list"
  >
    <div>
      Garfield
    </div>
    <div>
      Simba
    </div>
    <div>
      Tabby
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CatsList it should render the cat list based on gender Male 1`] = `
<DocumentFragment>
  <div
    data-testid="cats-list"
  >
    <div>
      Garfield
    </div>
    <div>
      Jim
    </div>
    <div>
      Max
    </div>
    <div>
      Tom
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CatsList it should render the component 1`] = `
<DocumentFragment>
  <div
    data-testid="cats-list"
  >
    <div>
      Garfield
    </div>
    <div>
      Jim
    </div>
    <div>
      Max
    </div>
    <div>
      Tom
    </div>
  </div>
</DocumentFragment>
`;
